--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="content-wrapper">
-        <p class="header">Happy New Year</p>
+        <p class="header" style="vertical-align:middle; text-align:center;">BETHEL NTCG <br />WISH YOU <br />A <br />HAPPY NEW YEAR</p>
         <h1 class="year" id="new-year">0000</h1>
         <div class="timer">
             <div class="timer-box">
