--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 <body>
 
     <div class="content-wrapper">
-        <p class="header" style="vertical-align: middle; text-align: center; font-family: Impact, sans-serif;"><b>BETHEL NTCG</b></p>
-        <p class="header" style="vertical-align: middle; text-align: center; font-family: 'Monotype Corsiva', cursive;">WISH YOU <br />A</p>
-        <p class="header" style="vertical-align: middle; text-align: center; font-family: 'Rockwell Nova Extra Bold', sans-serif; font-weight: bold;">HAPPY NEW YEAR</p>
+        <p class="header" style="vertical-align: middle; text-align: center; font-family: Impact, sans-serif;">
+          <b>BETHEL NTCG</b><br>
+          <span style="font-family: 'Monotype Corsiva', cursive;">WISH YOU <br> A</span><br>
+          <span style="font-family: 'Rockwell Nova Extra Bold', sans-serif; font-weight: bold;">HAPPY NEW YEAR</span>
+        </p>
         <h1 class="year" id="new-year">0000</h1>
         <div class="timer">
             <div class="timer-box">
