--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <div class="content-wrapper">
         <p class="header" style="vertical-align: middle; text-align: center; font-family: Impact, sans-serif;">
-          <b>BETHEL NTCG</b><br>
-          <span style="font-family: 'Monotype Corsiva', cursive;">WISH YOU <br> A</span><br>
+          <b>BETHEL NTCG, Wirral</b><br>
+          <span style="font-family: 'Monotype Corsiva', cursive;">WISHING YOU <br> A</span><br>
           <span style="font-family: 'Rockwell Nova Extra Bold', sans-serif; font-weight: bold;">HAPPY NEW YEAR</span>
         </p>
         <h1 class="year" id="new-year">0000</h1>
